project finished. Styles, login, register and logout. Todo: manage register errors

--- a/src/atomic/atoms/Button/Button.module.css
+++ b/src/atomic/atoms/Button/Button.module.css
@@ -1,17 +1,17 @@
 .button{
     background-color: var(--color-primary);
-    color: var(--color-white);
+    color: var(--main);
     font-size: 14px;
     height: 32px;
     border-radius: 32px;
     align-items: center;
     cursor: pointer;
     padding: 0px 10px;
-    border: 0px solid #fff;
+    border: 3px solid #fff;
     user-select: none;
 }
 
 .button:hover{
-    background-color: var(--color-primary-hover);
+    color: var(--general);
 }
 
