--- a/src/atomic/molecules/Header/Header.module.css
+++ b/src/atomic/molecules/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #18a77361;
+    background-color: #191928;
     padding: 10px 0px;
 }
 
