--- a/src/atomic/atoms/PerfilPicture/PerfilPicture.module.css
+++ b/src/atomic/atoms/PerfilPicture/PerfilPicture.module.css
@@ -2,12 +2,13 @@
     display: flex;
     user-select: none;
     width: 100px;
+    height: 100px;
     
 }
 .picture img{  
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 100%;
-    border: 5px black solid;
+    border-radius: 100000px;
+    border: 5px var(--main) solid;
 }
