--- a/src/atomic/molecules/BoxLink/BoxLink.module.css
+++ b/src/atomic/molecules/BoxLink/BoxLink.module.css
@@ -2,22 +2,25 @@
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid var(--general);
     border-radius: 12px;
     padding: 7px;
     width: 100%;
     user-select: none;
     cursor: pointer;
+    color: var(--main)
 }
 
 .picture{
-    width: 48px;
+    width: 20px;
 }
 
 .picture img{
     border: 0px solid black;
     border-radius: 10px;
     object-fit: cover;
+    width: 100%;
+    margin-left: 10px;
 }
 
 .text{
