--- a/src/pages/styles/Home.module.css
+++ b/src/pages/styles/Home.module.css
@@ -11,3 +11,13 @@
     display: flex;
     justify-content: center;
 }
+
+.picture{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.username{
+    font-size: 20px;
+}
