--- a/src/pages/styles/UpdateUser.module.css
+++ b/src/pages/styles/UpdateUser.module.css
@@ -5,10 +5,10 @@
     margin: auto auto;
     margin-top: 3.125rem;
     gap: 3rem;
-    border: 0px black solid;
+    border: 5px solid var(--main);
     border-radius: 15px;
     padding: 1rem;
-    background-color: rgba(115, 33, 133, 0.119);
+    color: var(--general)
 }
 
 .header{
@@ -24,19 +24,6 @@
 .image{
     width: 6rem;
     height: 6rem;
-    user-select: none;
-    cursor: pointer;
-    
-}
-
-.image input[type="file"]{
-    display: none;
-}
-
-.image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .newData{
@@ -44,6 +31,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
+    gap: 1rem;
 }
 
 .input{
@@ -58,11 +46,11 @@
 }
 
 .input:hover{
-    outline: 1px var(--color-primary) solid;
+    outline: 1px var(--general) solid;
 }
 
 .input:focus{
-    outline: 2px var(--color-primary) solid;
+    outline: 2px var(--main) solid;
 }
 
 .inputBox{
