--- a/src/pages/styles/Register.module.css
+++ b/src/pages/styles/Register.module.css
@@ -5,7 +5,7 @@
     margin: auto auto;
     margin-top: 3.125rem;
     gap: 2rem;
-    border: 3px black solid;
+    border: 3px solid var(--general);
     border-radius: 15px;
     padding: 1rem;
     align-items: center;
@@ -34,11 +34,11 @@
 }
 
 .input:hover{
-    outline: 1px var(--color-primary) solid;
+    outline: 1px var(--general) solid;
 }
 
 .input:focus{
-    outline: 2px var(--color-primary) solid;
+    outline: 2px var(--main) solid;
 }
 
 .buttonBox{
