--- a/src/atomic/atoms/Button/Button.module.css
+++ b/src/atomic/atoms/Button/Button.module.css
@@ -1,17 +1,27 @@
 .button{
-    background-color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    background-color: unset;
     color: var(--main);
     font-size: 14px;
     height: 32px;
     border-radius: 32px;
-    align-items: center;
     cursor: pointer;
     padding: 0px 10px;
     border: 3px solid #fff;
     user-select: none;
 }
 
+.span{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .button:hover{
     color: var(--general);
+    .span > svg path{
+        fill: var(--general);
+    }
 }
 
