--- a/src/atomic/molecules/Header/Header.module.css
+++ b/src/atomic/molecules/Header/Header.module.css
@@ -1,23 +1,33 @@
 .header{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     background-color: #191928;
     padding: 10px 0px;
-}
-
-.perfil{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.perfil img {
-    width: 70px;    
 }
 
 .buttonGroup{
     display: flex;
     gap: 0.5rem;
+}
+
+.link{
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+    border: 3px solid #fff;
+    border-radius: 32px;
+    user-select: none;
+    gap: 5px;
+    text-decoration: none;
+}
+
+.github{
+    color: var(--main);
+}
+.link:hover{
+    .github{
+        color: var(--general);
+    }
 }
 
